compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_size_not_int_variable.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 287
expression: "let a = 2.0 case <<1>> { <<1:size(a)>> -> a }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:35
  │
1 │ let a = 2.0 case <<1>> { <<1:size(a)>> -> a }
  │                                   ^

Expected type:

    Int

Found type:

    Float


